[package]
name = "vibo_minigrep"
version = "0.1.0"
edition = "2021"
description = "a tool to find text in a file"
repository="https://github.com/vibovenkat123/vibo_minigrep"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
